--- a/index.html
+++ b/index.html
@@ -8,10 +8,35 @@
   <title>Formulario de Login</title>
 </head>
 <body>
+  
   <div>
     <h1>Sign up</h1>
   </div>
-  
+  <nav>
+    <div>
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name">
+    </div>
+    <div>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email">
+     <div>
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username">
+    </div>
+    <div>
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" required minlength="3">
+    </div>
+    <div class="checkbox">
+      <input type="checkbox" id="termos" name="termos" value="termos" />
+      <label for="termos">Li os termos e condições.</label>
+      <button>Enviar</button>
+    </div>
+    <div>
+
+    </div>
+  </nav>
 
 
 </body>
