--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <title>Formulario de Login</title>
 </head>
 <body>
-  <form action="">
   <div>
     <h1>Sign up</h1>
   </div>
-  <nav class="box">
+  <div class ='box'>
+  <form action="">
+    <fieldset>
+  <nav>
     <div>
       <label for="name">Name</label>
       <input type="text" id="name" name="name">
@@ -37,7 +39,8 @@
       <input type="submit" value="Entrar">
     </div>
   </nav>
+</fieldset>
 </form>
-
+</div>
 </body>
 </html>
